name:                lzfse
version:             0.1.0.0
synopsis:            lzfse C bindings
description:         Implements lzfse C bindings
                     .
                     lzfse C library can be found at
                     .
                     <https://github.com/lzfse/lzfse>
homepage:            https://github.com/wangbj/lzfse
license:             BSD3
license-file:        LICENSE
author:              Baojun Wang
maintainer:          wangbj@gmail.com
copyright:           2016 Baojun Wang
category:            Codec
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codec.Compression.LZFSE
                     , Codec.Compression.LZFSE.FFI
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0 && < 0.11.0.0
  default-language:    Haskell2010
  c-sources:           cbits/lzfse_decode_base.c
                     , cbits/lzfse_decode.c
                     , cbits/lzfse_encode_base.c
                     , cbits/lzfse_encode.c
                     , cbits/lzfse_fse.c
                     , cbits/lzvn_decode_base.c
                     , cbits/lzvn_encode_base.c

executable lzfse-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10.6.0 && < 0.11.0.0
                     , lzfse
  default-language:    Haskell2010

test-suite lzfse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring >= 0.10.6.0 && < 0.11.0.0
                     , lzfse
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wangbj/lzfse
